Fix #17, fix #15. Still need to do #19 to make grid lines go away, but didn't want to change too much at once. Goes back to canvas UI and scales canvas to fit screen. Also makes editor work at smaller screen sizes (adds scrolling)

--- a/ui.css
+++ b/ui.css
@@ -5,6 +5,9 @@
 
 body {
   margin: 0;
+  width: 100%;
+  height: 100%;
+
   overscroll-behavior: none; /* Disable Chrome two fingers back/forward swipe */
   user-select: none;  /* Prevent accidental selection while dragging mouse */
   touch-action: none;
@@ -19,13 +22,11 @@ body {
   justify-content: center;
 }
 
-:root {
-  --tileSize: 48px;
+#wrapper {
+  position: relative;
+  aspect-ratio: 15 / 16;
+  min-width: 0%;
 }
-
-/* div#game > canvas {
-  position: absolute;
-} */
 
 .center {
   display: flex;
@@ -33,64 +34,26 @@ body {
   align-items: center;
 }
 
-#wrapper {
-  position: relative;
-}
-
-#game {
-  width:  calc( var( --tileSize ) * 15 );
-  height: calc( var( --tileSize ) * 15 );
-  position: relative;
-  overflow: hidden;
-}
-#paused {
-  position: absolute;
-  top: 0;
-  background-color: #000a;
-  width: 100%;
-  height: 100%;
-  font-size: 50;
-  visibility: hidden;
-}
 .message {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100%;
-  font-size: 50;
+  background-color: #000b;
+  font-size: 7vmin;
   visibility: hidden;
 }
-.bar {
-  background-color: #000a;
-  width: 100%;
-  height: 15%;
-  border-top: 2px white solid;
-  border-bottom: 2px white solid;
-}
 
-#ui {
-  background-color: gray;
-  width: min-content;
-  height: var( --tileSize );
-  display: flex;
-}
-#rescued {
-  width: max-content;
-}
-#timer {
-  width: calc( var( --tileSize ) * 5 );
-}
-#timerBar {
-  border: 2px black solid;
-  width: 80%;
-  height: 30%;
-}
-#timeLeft {
-  background: linear-gradient( 90deg, red 0%, yellow 50%, green 100% );
+.full {
   width: 100%;
   height: 100%;
 }
-#lives {
-  width: max-content;
-  direction: rtl;
+
+.bar {
+  --barHeight: 15%;
+  width: 100%;
+  height: var(--barHeight);
+  margin: calc( 50% - var( --barHeight ) / 2 ) 0%;
+  border-width: 0.5vmin 0;
+  border-style: solid;
+  border-color: white;
 }
